--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,6 @@
 <body>
     <h1>Create your own resume data in JSON format
     </h1>
-    <script src="script.js"></script>
+    <script src="resume.js"></script>
 </body>
 </html>
